parser.js
/*
 * Generated by PEG.js 0.10.0.
 *
 * http://pegjs.org/
 */

"use strict";

function peg$subclass(child, parent) {
  function ctor() { this.constructor = child; }
  ctor.prototype = parent.prototype;
  child.prototype = new ctor();
}

function peg$SyntaxError(message, expected, found, location) {
  this.message  = message;
  this.expected = expected;
  this.found    = found;
  this.location = location;
  this.name     = "SyntaxError";

  if (typeof Error.captureStackTrace === "function") {
    Error.captureStackTrace(this, peg$SyntaxError);
  }
}

peg$subclass(peg$SyntaxError, Error);

peg$SyntaxError.buildMessage = function(expected, found) {
  var DESCRIBE_EXPECTATION_FNS = {
        literal: function(expectation) {
          return "\"" + literalEscape(expectation.text) + "\"";
        },

        "class": function(expectation) {
          var escapedParts = "",
              i;

          for (i = 0; i < expectation.parts.length; i++) {
            escapedParts += expectation.parts[i] instanceof Array
              ? classEscape(expectation.parts[i][0]) + "-" + classEscape(expectation.parts[i][1])
              : classEscape(expectation.parts[i]);
          }

          return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
        },

        any: function(expectation) {
          return "any character";
        },

        end: function(expectation) {
          return "end of input";
        },

        other: function(expectation) {
          return expectation.description;
        }
      };

  function hex(ch) {
    return ch.charCodeAt(0).toString(16).toUpperCase();
  }

  function literalEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/"/g,  '\\"')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function classEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/\]/g, '\\]')
      .replace(/\^/g, '\\^')
      .replace(/-/g,  '\\-')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function describeExpectation(expectation) {
    return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
  }

  function describeExpected(expected) {
    var descriptions = new Array(expected.length),
        i, j;

    for (i = 0; i < expected.length; i++) {
      descriptions[i] = describeExpectation(expected[i]);
    }

    descriptions.sort();

    if (descriptions.length > 0) {
      for (i = 1, j = 1; i < descriptions.length; i++) {
        if (descriptions[i - 1] !== descriptions[i]) {
          descriptions[j] = descriptions[i];
          j++;
        }
      }
      descriptions.length = j;
    }

    switch (descriptions.length) {
      case 1:
        return descriptions[0];

      case 2:
        return descriptions[0] + " or " + descriptions[1];

      default:
        return descriptions.slice(0, -1).join(", ")
          + ", or "
          + descriptions[descriptions.length - 1];
    }
  }

  function describeFound(found) {
    return found ? "\"" + literalEscape(found) + "\"" : "end of input";
  }

  return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
};

function peg$parse(input, options) {
  options = options !== void 0 ? options : {};

  var peg$FAILED = {},

      peg$startRuleFunctions = { start: peg$parsestart },
      peg$startRuleFunction  = peg$parsestart,

      peg$c0 = function(im, defs, ex) {
          return {
              definitions: getNth(defs, 0),
              imports: getNth(im, 0),
              export: ex || [ ]
          }
      },
      peg$c1 = "import",
      peg$c2 = peg$literalExpectation("import", false),
      peg$c3 = function(name) {
          return name.value
      },
      peg$c4 = "export",
      peg$c5 = peg$literalExpectation("export", false),
      peg$c6 = function(names) {
          return names
      },
      peg$c7 = "=",
      peg$c8 = peg$literalExpectation("=", false),
      peg$c9 = ".",
      peg$c10 = peg$literalExpectation(".", false),
      peg$c11 = function(name, index) {
          return {
              name: name,
              index: ast("string", { value: index })
          }
      },
      peg$c12 = function(name, index) {
          return {
              name: name,
              index: index
          }
      },
      peg$c13 = function(name) {
          return {
              name: name,
              index: ast("string", { value: name })
          }
      },
      peg$c14 = "let",
      peg$c15 = peg$literalExpectation("let", false),
      peg$c16 = "{",
      peg$c17 = peg$literalExpectation("{", false),
      peg$c18 = "}",
      peg$c19 = peg$literalExpectation("}", false),
      peg$c20 = function(items, expr) {
          return ast("table_destructure", {
              pairs: getItems(items),
              value: expr
          })
      },
      peg$c21 = function(items) {
          return getItems(items)
      },
      peg$c22 = "[",
      peg$c23 = peg$literalExpectation("[", false),
      peg$c24 = "]",
      peg$c25 = peg$literalExpectation("]", false),
      peg$c26 = function(items, expr) {
          return ast("array_destructure", {
              names: items,
              value: expr
          })
      },
      peg$c27 = function(name, expr) {
          return ast("simple_def", {
              name: name,
              value: expr
          });
      },
      peg$c28 = "do",
      peg$c29 = peg$literalExpectation("do", false),
      peg$c30 = "then",
      peg$c31 = peg$literalExpectation("then", false),
      peg$c32 = function(expr, next) {
          return ast("do_expr", {
              expression: expr,
              next: next
          });
      },
      peg$c33 = "in",
      peg$c34 = peg$literalExpectation("in", false),
      peg$c35 = function(def, expr) {
          return ast("let_in_expr", {
              definition: def,
              expression: expr
          });
      },
      peg$c36 = "|",
      peg$c37 = peg$literalExpectation("|", false),
      peg$c38 = function(condition, value) {
          return {
              condition: condition,
              value: value
          }
      },
      peg$c39 = "cases",
      peg$c40 = peg$literalExpectation("cases", false),
      peg$c41 = "else",
      peg$c42 = peg$literalExpectation("else", false),
      peg$c43 = function(branches, else_value) {
          return ast("when_expr", {
              branches: branches,
              else_value: else_value
          });
      },
      peg$c44 = "or",
      peg$c45 = peg$literalExpectation("or", false),
      peg$c46 = "&",
      peg$c47 = peg$literalExpectation("&", false),
      peg$c48 = function(left, op, right) {
          return ast("binop", {
              op: op,
              left: left,
              right: right
          }); 
      },
      peg$c49 = "==",
      peg$c50 = peg$literalExpectation("==", false),
      peg$c51 = "~=",
      peg$c52 = peg$literalExpectation("~=", false),
      peg$c53 = "<",
      peg$c54 = peg$literalExpectation("<", false),
      peg$c55 = "<=",
      peg$c56 = peg$literalExpectation("<=", false),
      peg$c57 = ">",
      peg$c58 = peg$literalExpectation(">", false),
      peg$c59 = ">=",
      peg$c60 = peg$literalExpectation(">=", false),
      peg$c61 = "++",
      peg$c62 = peg$literalExpectation("++", false),
      peg$c63 = "+",
      peg$c64 = peg$literalExpectation("+", false),
      peg$c65 = "-",
      peg$c66 = peg$literalExpectation("-", false),
      peg$c67 = "..",
      peg$c68 = peg$literalExpectation("..", false),
      peg$c69 = "*",
      peg$c70 = peg$literalExpectation("*", false),
      peg$c71 = "/",
      peg$c72 = peg$literalExpectation("/", false),
      peg$c73 = "%",
      peg$c74 = peg$literalExpectation("%", false),
      peg$c75 = "~",
      peg$c76 = peg$literalExpectation("~", false),
      peg$c77 = function(op, right) {
          return ast("unary", {
              op: op,
              right: right
          });
      },
      peg$c78 = "^",
      peg$c79 = peg$literalExpectation("^", false),
      peg$c80 = function(left, op, right) {
          return ast("binop", {
              op: op,
              left: left,
              right: right
          });
      },
      peg$c81 = ">>",
      peg$c82 = peg$literalExpectation(">>", false),
      peg$c83 = function(right) {
          return {
              type: "bind",
              right: right
          }
      },
      peg$c84 = function(left, ops) {
          let e = left;
          while (ops.length > 0) {
              e = {
                  left: e,
                  ...ops.shift()
              };
          }
          return e;
      },
      peg$c85 = "try",
      peg$c86 = peg$literalExpectation("try", false),
      peg$c87 = function(body, false_branch) {
          return ast("try_expr", {
              body: body,
              false_branch: false_branch? false_branch[3] : undefined
          });
      },
      peg$c88 = function(f, args) {
          return ast("application", {
              f: f,
              args: getNth(args, 0)
          });
      },
      peg$c89 = ":",
      peg$c90 = peg$literalExpectation(":", false),
      peg$c91 = function(name, args) {
          return {
              type: "method_call",
              name: name,
              args: getNth(args, 0)
          }
      },
      peg$c92 = "#",
      peg$c93 = peg$literalExpectation("#", false),
      peg$c94 = function(index) {
          return {
              type: "index",
              index: index
          }
      },
      peg$c95 = function(name) {
          return {
              type: "property",
              name: name
          }
      },
      peg$c96 = function(table, traversals) {
          let e = table;
          while (traversals.length > 0) {
              e = {
                  table: e,
                  ...traversals.shift()
              };
          }
          return e;
      },
      peg$c97 = peg$otherExpectation("string"),
      peg$c98 = "\"",
      peg$c99 = peg$literalExpectation("\"", false),
      peg$c100 = function(parts) { 
          let str = "";
          let ast_type = "string";
          let format_values = [ ];

          for (let i = 0; i < parts.length; i++) {
              const part = parts[i];
              if (typeof part === "string") {
                  str += part;
              }
              else {
                  format_values.push(part.value);
                  str += "%s";
                  ast_type = "fstring";
              }
          }

          return ast(ast_type, {
              value: str.replace(/\n/g, "\\n").replace(/\r/g, ""),
              format_values: format_values
          });
      },
      peg$c101 = "\\",
      peg$c102 = peg$literalExpectation("\\", false),
      peg$c103 = "$",
      peg$c104 = peg$literalExpectation("$", false),
      peg$c105 = peg$anyExpectation(),
      peg$c106 = function(char) { return char; },
      peg$c107 = function(sequence) { return "\\" + sequence; },
      peg$c108 = "${",
      peg$c109 = peg$literalExpectation("${", false),
      peg$c110 = function(value) { 
              return {
                  value: value
              }
          },
      peg$c111 = "b",
      peg$c112 = peg$literalExpectation("b", false),
      peg$c113 = function() { return "\b";   },
      peg$c114 = "f",
      peg$c115 = peg$literalExpectation("f", false),
      peg$c116 = function() { return "\f";   },
      peg$c117 = "n",
      peg$c118 = peg$literalExpectation("n", false),
      peg$c119 = function() { return "\n";   },
      peg$c120 = "r",
      peg$c121 = peg$literalExpectation("r", false),
      peg$c122 = function() { return "\r";   },
      peg$c123 = "t",
      peg$c124 = peg$literalExpectation("t", false),
      peg$c125 = function() { return "\t";   },
      peg$c126 = "v",
      peg$c127 = peg$literalExpectation("v", false),
      peg$c128 = function() { return "\x0B"; },
      peg$c129 = peg$otherExpectation("parenthesised expression"),
      peg$c130 = "(",
      peg$c131 = peg$literalExpectation("(", false),
      peg$c132 = ")",
      peg$c133 = peg$literalExpectation(")", false),
      peg$c134 = function(inner) {
          return ast("parenthesised", {
              inner: inner
          });
      },
      peg$c135 = peg$otherExpectation("variable"),
      peg$c136 = function(name) {
          return ast("variable", {
              name: name
          });
      },
      peg$c137 = peg$otherExpectation("boolean"),
      peg$c138 = "true",
      peg$c139 = peg$literalExpectation("true", false),
      peg$c140 = "false",
      peg$c141 = peg$literalExpectation("false", false),
      peg$c142 = function(text) {
          return ast("boolean", {
              value: text == "true"
          }); 
      },
      peg$c143 = peg$otherExpectation("number"),
      peg$c144 = /^[0-9]/,
      peg$c145 = peg$classExpectation([["0", "9"]], false, false),
      peg$c146 = function(digits) {
          return ast("number", {
              value: parseFloat(digits)
          });
      },
      peg$c147 = peg$otherExpectation("nil"),
      peg$c148 = "!",
      peg$c149 = peg$literalExpectation("!", false),
      peg$c150 = "()",
      peg$c151 = peg$literalExpectation("()", false),
      peg$c152 = function() {
          return ast("nil");
      },
      peg$c153 = peg$otherExpectation("array"),
      peg$c154 = function(items) {
          return ast("array", {
              items: getItems(items)
          });
      },
      peg$c155 = "<-",
      peg$c156 = peg$literalExpectation("<-", false),
      peg$c157 = ",",
      peg$c158 = peg$literalExpectation(",", false),
      peg$c159 = function(expr, in_var, collection, filters) {
          return ast("array_comprehension", {
              expression: expr,
              iter_var: in_var,
              collection: collection,
              filters: getNth(filters, 3)
          });
      },
      peg$c160 = function(index, value) {
          return {
              index: index,
              value: value
          }
      },
      peg$c161 = function(index, value) {
          return {
              index: ast("string", { value: index }),
              value: value
          }
      },
      peg$c162 = function(index) {
          return {
              index: ast("string", { value: index }),
              value: ast("variable", { name: index })
          }
      },
      peg$c163 = function(name, defaultVal) {
          return {
              name: name,
              defaultValue: defaultVal? defaultVal[2] : undefined
          }
      },
      peg$c164 = peg$otherExpectation("function"),
      peg$c165 = "->",
      peg$c166 = peg$literalExpectation("->", false),
      peg$c167 = "=>",
      peg$c168 = peg$literalExpectation("=>", false),
      peg$c169 = function(parameters, arrow_type, expr) {
          return ast("function", {
              parameters: [ ...(arrow_type == "=>"? [ { name: "self" } ] : [ ]), ...(parameters == "."? [ ] : parameters) ],
              result: expr
          });
      },
      peg$c170 = ";",
      peg$c171 = peg$literalExpectation(";", false),
      peg$c172 = peg$otherExpectation("table"),
      peg$c173 = function(items) {
          return ast("table", {
              elements: getItems(items)
          });
      },
      peg$c174 = peg$otherExpectation("whitespace"),
      peg$c175 = /^[' '\t\r\n]/,
      peg$c176 = peg$classExpectation(["'", " ", "'", "\t", "\r", "\n"], false, false),
      peg$c177 = peg$otherExpectation("name"),
      peg$c178 = /^[_a-zA-Z]/,
      peg$c179 = peg$classExpectation(["_", ["a", "z"], ["A", "Z"]], false, false),
      peg$c180 = /^[_a-zA-Z0-9]/,
      peg$c181 = peg$classExpectation(["_", ["a", "z"], ["A", "Z"], ["0", "9"]], false, false),
      peg$c182 = function(x) { return x },

      peg$currPos          = 0,
      peg$savedPos         = 0,
      peg$posDetailsCache  = [{ line: 1, column: 1 }],
      peg$maxFailPos       = 0,
      peg$maxFailExpected  = [],
      peg$silentFails      = 0,

      peg$resultsCache = {},

      peg$result;

  if ("startRule" in options) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildSimpleError(message, location);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text: text, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase) {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos) {
    var details = peg$posDetailsCache[pos], p;

    if (details) {
      return details;
    } else {
      p = pos - 1;
      while (!peg$posDetailsCache[p]) {
        p--;
      }

      details = peg$posDetailsCache[p];
      details = {
        line:   details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;
      return details;
    }
  }

  function peg$computeLocation(startPos, endPos) {
    var startPosDetails = peg$computePosDetails(startPos),
        endPosDetails   = peg$computePosDetails(endPos);

    return {
      start: {
        offset: startPos,
        line:   startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line:   endPosDetails.line,
        column: endPosDetails.column
      }
    };
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parsestart() {
    var s0;

    var key    = peg$currPos * 50 + 0,
        cached = peg$resultsCache[key];

    if (cached) {
      peg$currPos = cached.nextPos;

      return cached.result;
    }

    s0 = peg$parseprogram();

    peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

    return s0;
  }

  function peg$parseprogram() {
    var s0, s1, s2, s3, s4, s5, s6;

    var key    = peg$currPos * 50 + 1,
        cached = peg$resultsCache[key];

    if (cached) {
      peg$currPos = cached.nextPos;

      return cached.result;
    }

    s0 = peg$currPos;
    s1 = peg$parse_();
    if (s1 !== peg$FAILED) {
      s2 = [];
      s3 = peg$currPos;
      s4 = peg$parseimport();
      if (s4 !== peg$FAILED) {
        s5 = peg$parse_();
        if (s5 !== peg$FAILED) {
          s4 = [s4, s5];
          s3 = s4;
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
      } else {
        peg$currPos = s3;
        s3 = peg$FAILED;
      }
      while (s3 !== peg$FAILED) {
        s2.push(s3);
        s3 = peg$currPos;
        s4 = peg$parseimport();
        if (s4 !== peg$FAILED) {
          s5 = peg$parse_();
          if (s5 !== peg$FAILED) {
            s4 = [s4, s5];
            s3 = s4;
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
      }
      if (s2 !== peg$FAILED) {
        s3 = [];
        s4 = peg$currPos;
        s5 = peg$parsedefinition();
        if (s5 !== peg$FAILED) {
          s6 = peg$parse_();
          if (s6 !== peg$FAILED) {
            s5 = [s5, s6];
            s4 = s5;
          } else {
            peg$currPos = s4;
            s4 = peg$FAILED;
          }
        } else {
          peg$currPos = s4;
          s4 = peg$FAILED;
        }
        if (s4 !== peg$FAILED) {
          while (s4 !== peg$FAILED) {
            s3.push(s4);
            s4 = peg$currPos;
            s5 = peg$parsedefinition();
            if (s5 !== peg$FAILED) {
              s6 = peg$parse_();
              if (s6 !== peg$FAILED) {
                s5 = [s5, s6];
                s4 = s5;
              } else {
                peg$currPos = s4;
                s4 = peg$FAILED;
              }
            } else {
              peg$currPos = s4;
              s4 = peg$FAILED;
            }
          }
        } else {
          s3 = peg$FAILED;
        }
        if (s3 !== peg$FAILED) {
          s4 = peg$parse_();
          if (s4 !== peg$FAILED) {
            s5 = peg$parseexport();
            if (s5 === peg$FAILED) {
              s5 = null;
            }
            if (s5 !== peg$FAILED) {
              s6 = peg$parse_();
              if (s6 !== peg$FAILED) {
                peg$savedPos = s0;
                s1 = peg$c0(s2, s3, s5);
                s0 = s1;
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

    return s0;
  }

  function peg$parsedefinition() {
    var s0;

    var key    = peg$currPos * 50 + 2,
        cached = peg$resultsCache[key];

    if (cached) {
      peg$currPos = cached.nextPos;

      return cached.result;
    }

    s0 = peg$parsesimple_def();
    if (s0 === peg$FAILED) {
      s0 = peg$parsearray_destructure();
      if (s0 === peg$FAILED) {
        s0 = peg$parsetable_destructure();
      }
    }

    peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

    return s0;
  }

  function peg$parseimport() {
    var s0, s1, s2, s3;

    var key    = peg$currPos * 50 + 3,
        cached = peg$resultsCache[key];

    if (cached) {
      peg$currPos = cached.nextPos;

      return cached.result;
    }

    s0 = peg$currPos;
    if (input.substr(peg$currPos, 6) === peg$c1) {
      s1 = peg$c1;
      peg$currPos += 6;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c2); }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parse_();
      if (s2 !== peg$FAILED) {
        s3 = peg$parsestring();
        if (s3 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c3(s3);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

    return s0;
  }

  function peg$parseexport() {
    var s0, s1, s2, s3;

    var key    = peg$currPos * 50 + 4,
        cached = peg$resultsCache[key];

    if (cached) {
      peg$currPos = cached.nextPos;

      return cached.result;
    }

    s0 = peg$currPos;
    if (input.substr(peg$currPos, 6) === peg$c4) {
      s1 = peg$c4;
      peg$currPos += 6;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c5); }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parse_();
      if (s2 !== peg$FAILED) {
        s3 = peg$parseidentifier_list();
        if (s3 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c6(s3);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

    return s0;
  }

  function peg$parsetable_destructure_element() {
    var s0, s1, s2, s3, s4, s5, s6, s7;

    var key    = peg$currPos * 50 + 5,
        cached = peg$resultsCache[key];

    if (cached) {
      peg$currPos = cached.nextPos;

      return cached.result;
    }
